<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditFragment">

    <!-- Code name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/content_codename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_codename"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_name"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="488dp"
        app:layout_constraintWidth_min="88dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_codename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Code value -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/content_codeval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_codeval"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_codeval"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_codename"
        app:layout_constraintWidth_max="488dp"
        app:layout_constraintWidth_min="88dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_codeval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Fingerprint checkbox -->
    <TextView
        android:id="@+id/txt_checkbox_fingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_checkbox_fingerprint"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_codeval" />

    <CheckBox
        android:id="@+id/checkbox_fingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        app:layout_constraintStart_toEndOf="@id/txt_checkbox_fingerprint"
        app:layout_constraintTop_toBottomOf="@+id/content_codeval" />

    <!-- Code category -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/content_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_category"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_category"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_fingerprint"
        app:layout_constraintWidth_max="488dp"
        app:layout_constraintWidth_min="88dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Comments -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/content_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_comments"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_comments"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_category"
        app:layout_constraintWidth_max="488dp"
        app:layout_constraintWidth_min="88dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_comments"
            android:lines="4"
            android:maxLines="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>